[package]
name = "videolen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
ffmpeg-next = "4.4.0"
humantime = "2.1.0"
prettytable-rs = {version = "0.8.0", default-features = false}
structopt = {version = "0.3.25", default-features = false}
